squashing bugs

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,8 +26,10 @@
 
 .media {
 	padding: 10px;
-	margin-top: 5px;
+	margin: 0px 0px 2px 0px;
 	cursor: pointer;
+	background-color: white;
+	border-radius: 5px;
 }
 .media:hover {
 	background-color: #FBFBFB;
